谈话学生添加家长信息

--- a/application/admin/command/Api/template/index.html
+++ b/application/admin/command/Api/template/index.html
@@ -267,7 +267,7 @@
                     Generated on {:date('Y-m-d H:i:s')}
                 </div>
                 <div class="col-md-6" align="right">
-                    <a href="https://www.fastadmin.net" target="_blank">FastAdmin</a>
+                    <a href="http://yiban.chd.edu.cn" target="_blank">chdyiban</a>
                 </div>
             </div>
 
