--- a/application/admin/view/common/header.html
+++ b/application/admin/view/common/header.html
@@ -1,9 +1,11 @@
 <!-- Logo -->
 <a href="javascript:;" class="logo">
     <!-- 迷你模式下Logo的大小为50X50 -->
-    <span class="logo-mini">{$site.name|mb_substr=0,4,'utf-8'|mb_strtoupper='utf-8'}</span>
+    <!-- <span class="logo-mini">{$site.name|mb_substr=0,4,'utf-8'|mb_strtoupper='utf-8'}</span> -->
+    <span class="logo-mini">易知数据</span>
     <!-- 普通模式下Logo -->
-    <span class="logo-lg"><b>{$site.name|mb_substr=0,4,'utf-8'}</b>{$site.name|mb_substr=4,null,'utf-8'}</span>
+    <!-- <span class="logo-lg"><b>{$site.name|mb_substr=0,4,'utf-8'}</b>{$site.name|mb_substr=4,null,'utf-8'}</span> -->
+    <span class="logo-lg"><b>易知数据</b>管理后台</span>
 </a>
 
 <!-- 顶部通栏样式 -->
@@ -103,7 +105,7 @@
                             </p>
                         </li>
                         <!-- Menu Body -->
-                        <li class="user-body">
+                        <!-- <li class="user-body">
                             <div class="row">
                                 <div class="col-xs-4 text-center">
                                     <a href="https://www.fastadmin.net" target="_blank">{:__('FastAdmin')}</a>
@@ -115,7 +117,7 @@
                                     <a href="https://doc.fastadmin.net" target="_blank">{:__('Docs')}</a>
                                 </div>
                             </div>
-                        </li>
+                        </li> -->
                         <!-- Menu Footer-->
                         <li class="user-footer">
                             <div class="pull-left">
