--- a/application/admin/view/conversationrecord/index/add.html
+++ b/application/admin/view/conversationrecord/index/add.html
@@ -8,6 +8,18 @@
         </div>
     </div>
     <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('关注类型')}:</label>
+       <div class="col-xs-12 col-sm-8">
+                       
+           <select  id="c-GZLX" data-rule="required" class="form-control selectpicker" name="row[GZLX]">
+               {foreach name="gzlxList" item="vo"}
+                   <option value="{$key}" {in name="key" value="1"}selected{/in}>{$vo}</option>
+               {/foreach}
+           </select>
+
+       </div>
+   </div>
+    <div class="form-group">
         <label for="c-tags" class="control-label col-xs-12 col-sm-2">{:__('学生标签')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-tags"  class="form-control selectpage" placeholder="请手动输入或选择标签" data-source="conversationrecord/tags/selectpage" data-primary-key="name" data-multiple="true" name="row[tags]" type="text" >
@@ -60,18 +72,6 @@
         <label for="c-content" class="control-label col-xs-12 col-sm-2">{:__('总体评价')}:</label>
         <div class="col-xs-12 col-sm-8">
             <textarea id="c-ZTPJ" data-rule="required" class="form-control editor" name="row[ZTPJ]" rows="15" ></textarea>
-        </div>
-    </div>
-    <div class="form-group">
-         <label class="control-label col-xs-12 col-sm-2">{:__('Gzlx')}:</label>
-        <div class="col-xs-12 col-sm-8">
-                        
-            <select  id="c-GZLX" data-rule="required" class="form-control selectpicker" name="row[GZLX]">
-                {foreach name="gzlxList" item="vo"}
-                    <option value="{$key}" {in name="key" value="1"}selected{/in}>{$vo}</option>
-                {/foreach}
-            </select>
-
         </div>
     </div>
     <div class="form-group layer-footer">
