--- a/application/admin/view/index/login.html
+++ b/application/admin/view/index/login.html
@@ -97,7 +97,8 @@
                             </form>
                         </div>
                     </div>
-                    <p class="copyright"><a href="https://www.fastadmin.net">Powered By FastAdmin</a></p>
+                    <!-- <p class="copyright"><a href="https://www.fastadmin.net">Powered By FastAdmin</a></p> -->
+                    <p class="copyright"><a href="http://yiban.chd.edu.cn">Powered By chdyiban</a></p>
                 </div>
             </div>
         </div>
