档案查询联系方式变更

--- a/application/index/view/filequery/index.html
+++ b/application/index/view/filequery/index.html
@@ -71,7 +71,7 @@
         <section>
             <h3>Step3.领取办理</h3>
             <p>
-                持以上材料到渭水校区行政楼一楼103室办理登记、审核、领取档案（联系方式：朱老师 029-83135157）
+                持以上材料到渭水校区行政楼4楼401室办理登记、审核、领取档案（联系方式：朱老师 029-61105156）
             </p>
         </section>
     </article>
