辅导员考核完善

--- a/application/admin/view/index/login.html
+++ b/application/admin/view/index/login.html
@@ -80,7 +80,7 @@
                                     <div class="input-group-addon"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></div>
                                     <select type="text" class="form-control" id="pd-form-logintype" placeholder="{:__('登录方式')}" name="logintype" >
                                         <option value="normal">系统用户</option>
-                                        <option value="school" selected="selected">信息门户</option>
+                                        <option value="school" selected="selected">信息门户账户</option>
                                     </select>
                                 </div>
                                 {if $config.fastadmin.login_captcha}
