--- a/application/admin/view/major/index/print.html
+++ b/application/admin/view/major/index/print.html
@@ -49,7 +49,7 @@
                 </style>
             </div>
             <div class="col-xs-6">
-                <p class="lead">准考证验证</p>
+                <p class="lead">验证二维码</p>
                     <img src="{$imageUrl}" alt="">
             </div>    
             
