注意事项修改

--- a/application/admin/view/major/index/print.html
+++ b/application/admin/view/major/index/print.html
@@ -87,9 +87,10 @@
           </div>
           <p class="text-muted well well-sm no-shadow" style="margin-top: 10px;">
             <strong>注意事项</strong><br/>
-            1.参加考核者须于10月8日-10月12日登录系统，完成报名和打印准考证工作；<br/>
-            2.参加考核者原则上不得请假，因特殊原因不能参加考核者...；<br/>
-            3.参加考核者要按规定时间进入场地。我写我生、基础知识测试缓解，迟到15分钟视为无故不参加考核；<br/>
+            1.参加考核者须于10月8日-10月12日24:00登陆https://yiban.chd.edu.cn/admin系统报名，选择“信息门户”账号登录，输入门户账号、密码后，打印准考证。<br/>
+            2.参加考核者按照准考证规定的时间、地点参加考核。考核采取闭卷笔试形式，全程录像。考核过程中不得使用电脑、手机等电子设备查询资料或携带纸质材料。<br/>
+            3.参加考核者原则上不得请假，因特殊原因不能参加考核者须由学院党委书记批准，学工部备案，并给予一次补考机会，时间待定。无故不参加考核者、考核过程有违纪行为者不允许参加补考。<br/>
+            4.考核结果通报有关单位，同时作为辅导员年度考核结果的重要依据。<br/>
           </p>
     </div>
     <div class="row"  align="center">
