--- a/application/admin/view/conversationrecord/count/index.html
+++ b/application/admin/view/conversationrecord/count/index.html
@@ -52,7 +52,8 @@
     </div>
     <!-- /.col -->
 </div>
-<div class="col-md-12">
+<div class="row">
+<div class="col-md-12" style="padding-bottom: 40px;">
     <!-- AREA CHART -->
     <div class="box box-primary">
         <div class="box-header with-border">
@@ -72,7 +73,7 @@
     <!-- /.box-body -->
     </div>
     <!-- /.box -->
-
+</div>
 </div>
 <div class="panel panel-default panel-intro">
     {:build_heading()}
