--- a/application/admin/view/conversationrecord/index/edit.html
+++ b/application/admin/view/conversationrecord/index/edit.html
@@ -58,7 +58,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('家长联系方式')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-JZDH" data-rule="required;mobile" class="form-control" autocomplete="off" value="{$row.JZDH}" name="row[JZDH]" type="text">
+            <input id="c-JZDH" data-rule="mobile" class="form-control" autocomplete="off" value="{$row.JZDH}" name="row[JZDH]" type="text">
         </div>
     </div>
     <div class="form-group">
