修改日历文件结构

--- a/application/admin/view/calendar/calendar/index.html
+++ b/application/admin/view/calendar/calendar/index.html
@@ -61,7 +61,7 @@
                     <!-- the events -->
                     <div id="external-events">
                         {foreach $eventList as $k=>$v}
-                        <div class="external-event" data-id="{$v.id}" data-title="{$v.title}" data-background="{$v.background}" style="background-color:{$v.background};color:#fff;">{$v.title}</div>
+                        <div class="external-event" data-id="{$v.id}" data-title="{$v.title}" data-background="{$v.background}" style="color:#fff;background-color:{$v.background};">{$v.title}</div>
                         {/foreach}
                         <div class="checkbox">
                             <label for="drop-remove">
