--- a/application/admin/view/index/login.html
+++ b/application/admin/view/index/login.html
@@ -76,13 +76,13 @@
                                     <div class="input-group-addon"><span class="glyphicon glyphicon-lock" aria-hidden="true"></span></div>
                                     <input type="password" class="form-control" id="pd-form-password" placeholder="{:__('Password')}" name="password" autocomplete="off" value="" data-rule="{:__('Password')}:required;password" />
                                 </div>
-                                <div class="input-group">
+                                <!-- <div class="input-group">
                                     <div class="input-group-addon"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></div>
                                     <select type="text" class="form-control" id="pd-form-logintype" placeholder="{:__('登录方式')}" name="logintype" >
                                         <option value="normal">系统用户</option>
                                         <option value="school" selected="selected">信息门户账户</option>
                                     </select>
-                                </div>
+                                </div> -->
                                 {if $config.fastadmin.login_captcha}
                                 <div class="input-group">
                                     <div class="input-group-addon"><span class="glyphicon glyphicon-option-horizontal" aria-hidden="true"></span></div>
@@ -97,9 +97,20 @@
                                         <input type="checkbox" name="keeplogin" id="keeplogin" value="1" />
                                         {:__('Keep login')}
                                     </label>
+                                  
                                 </div>
                                 <div class="form-group">
                                     <button type="submit" class="btn btn-success btn-lg btn-block">{:__('Sign in')}</button>
+                                </div>
+                                <div class="form-group">
+                                    <label class="inline" for="">
+                                        <span style="font-size: 17px;font-weight: 600;">你还可以用以下登录方式:</span>                                   
+                                        <span>
+                                            <a href="../../ids/admin/index" style="display: inline-block;">
+                                                <img width="25" height="25" src="http://www.chd.edu.cn/_upload/article/images/0c/70/5ea9b13b46299475c410572073a5/3a50978d-ffcc-4384-8872-a638806b2829.jpg">
+                                            </a>                                    
+                                        </span>                                         
+                                    </label>
                                 </div>
                             </form>
                         </div>
