--- a/application/admin/view/conversationrecord/count/index.html
+++ b/application/admin/view/conversationrecord/count/index.html
@@ -74,6 +74,27 @@
     </div>
     <!-- /.box -->
 </div>
+<div class="col-md-12" style="padding-bottom: 40px;">
+    <!-- AREA CHART -->
+    <div class="box box-primary">
+        <div class="box-header with-border">
+            <h3 class="box-title">班级统计</h3>
+
+            <div class="box-tools pull-right">
+            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+            </button>
+            <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+        </div>
+        </div>
+        <div class="box-body">
+            <div class="chart">
+                <canvas id="areaClassChart" style="height: 250px; width: 467px;" height="375" width="700"></canvas>
+            </div>
+        </div>
+    <!-- /.box-body -->
+    </div>
+    <!-- /.box -->
+</div>
 </div>
 <div class="panel panel-default panel-intro">
     {:build_heading()}
