--- a/application/admin/view/police/people/add.html
+++ b/application/admin/view/police/people/add.html
@@ -33,7 +33,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Mobile')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-mobile" class="form-control" data-rule="required" name="row[mobile]" type="text">
+            <input id="c-mobile" class="form-control"  name="row[mobile]" type="text">
         </div>
     </div>
     <div class="form-group">
