--- a/application/admin/view/police/category/add.html
+++ b/application/admin/view/police/category/add.html
@@ -39,9 +39,9 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Num')}:</label>
+        <label class="control-label col-xs-12 col-sm-2">{:__('人数')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-num" class="form-control" name="row[num]" type="number" value="0">
+            <input id="c-num" class="form-control" name="row[count]" type="number" value="0">
         </div>
     </div>
     <div class="form-group">
