--- a/application/admin/view/police/category/edit.html
+++ b/application/admin/view/police/category/edit.html
@@ -39,6 +39,12 @@
         </div>
     </div>
     <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">标注颜色:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-color" class="form-control" name="row[color]" type="text" value="{$row.color}">
+        </div>
+    </div>
+    <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('人数')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-num" class="form-control" name="row[count]" type="number" value="{$row.num}">
