辅导员报名提交

--- a/application/admin/view/major/index/index.html
+++ b/application/admin/view/major/index/index.html
@@ -6,7 +6,8 @@
                 <input type="text" value="{$basicInfo.GH}" class="hidden" id="GH">
                 <input type="text" value="false" class="hidden" id="check">
                 <input type="text" value="{$basicInfo.XM}" class="hidden" id="XM">
-                2019年长安大学辅导员素质能力考核-报名
+                <input type="text" value="{$basicInfo.type}" class="hidden" id="type">
+                2020年长安大学辅导员素质能力考核-报名
             <small class="pull-right">日期：{$basicInfo.time}</small>
             </h2>
         </div>
