--- a/application/admin/view/major/index/print.html
+++ b/application/admin/view/major/index/print.html
@@ -6,7 +6,7 @@
                 <h2 class="page-header">
                     <input type="text" value="true" class="hidden" id="check">
                     <input type="text" value="{$requestUrl}" class="hidden" id="url">
-                    2019年长安大学辅导员素质能力考核-准考证
+                    2020年长安大学辅导员素质能力考核-准考证
                 <small class="pull-right">日期：{$basicInfo.time}</small>
                 </h2>
             </div>
@@ -28,7 +28,7 @@
                     <strong>{$basicInfo.YXJC}</strong>
                     <strong>{$signInfo.KC}</strong>
                     <strong>{$signInfo.ZH}</strong>
-                    <strong>2019-10-15</strong>
+                    <strong>2020-10-27</strong>
                 </div>
                 <style>
                 .bmcontent span{
@@ -54,37 +54,50 @@
             </div>    
             
         </div>
-        <div class="row" style="margin-top:25px;">
-            <div class="col-xs-12 table-responsive">
-              <table class="table table-striped">
-                <thead>
-                <tr>
-                  <th>序号</th>
-                  <th>环节</th>
-                  <th>时间</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                  <td>1</td>
-                  <td>我写我生</td>
-                  <td>2019-10-15 9:00-11:00</td>
-                </tr>
-                <tr>
-                  <td>2</td>
-                  <td>基础知识测试</td>
-                  <td>2019-10-15 9:00-11:00</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>理论宣讲</td>
-                    <td>2019-10-18 </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            <!-- /.col -->
-          </div>
+
+        
+		<div class="row" style="margin-top:25px;">
+			<div class="col-xs-12 table-responsive">
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>序号</th>
+						<th>环节</th>
+						<th>时间</th>
+					</tr>
+				</thead>
+				{eq name="{$basicInfo.XM}" value="1"}
+				<tbody>
+					<tr>
+						<td>1</td>
+						<td>我写我生</td>
+						<td>2020-10-27 9:00-9:30</td>
+					</tr>
+				</tbody>
+				{else/}
+				<tbody>
+					<tr>
+						<td>1</td>
+						<td>我写我生</td>
+						<td>2020-10-27 9:00-11:00</td>
+					</tr>
+					<tr>
+						<td>2</td>
+						<td>基础知识测试</td>
+						<td>2020-10-27 9:00-11:00</td>
+					</tr>
+					<tr>
+						<td>3</td>
+						<td>宣讲对谈</td>
+						<td>2020-11-22</td>
+					</tr>
+				</tbody>
+			</table>
+			</div>
+			<!-- /.col -->
+		</div>
+
+
           <p class="text-muted well well-sm no-shadow" style="margin-top: 10px;">
             <strong>注意事项</strong><br/>
             1.参加考核者须于10月8日-10月12日24:00登陆https://yiban.chd.edu.cn/admin系统报名，选择“信息门户”账号登录，输入门户账号、密码后，打印准考证。<br/>
