--- a/application/admin/view/major/index/index.html
+++ b/application/admin/view/major/index/index.html
@@ -40,7 +40,7 @@
                     <input type="radio" name="place" value="BB">本部
                 </label>
                 <label class="radio-inline col-xs-1">
-                    <input type="radio" name="place" value="WS">渭水
+                    <input type="radio" name="place" value="WS" checked="checked">渭水
                 </label>
         </div>  
     </div>
