--- a/application/admin/view/major/index/index.html
+++ b/application/admin/view/major/index/index.html
@@ -36,9 +36,9 @@
     <div class="row">
         <div class="form-group col-xs-12">
             <label class="control-label col-xs-6" style="text-align: center;" >请选择考场：</label>
-                <label class="radio-inline col-xs-1">
+                <!-- <label class="radio-inline col-xs-1">
                     <input type="radio" name="place" value="BB">本部
-                </label>
+                </label> -->
                 <label class="radio-inline col-xs-1">
                     <input type="radio" name="place" value="WS" checked="checked">渭水
                 </label>
