--- a/application/admin/view/major/index/print.html
+++ b/application/admin/view/major/index/print.html
@@ -66,7 +66,7 @@
 						<th>时间</th>
 					</tr>
 				</thead>
-				{eq name="{$basicInfo.XM}" value="1"}
+				{eq name="$basicInfo.type" value="1"}
 				<tbody>
 					<tr>
 						<td>1</td>
@@ -92,6 +92,7 @@
 						<td>2020-11-22</td>
 					</tr>
 				</tbody>
+				{/eq}
 			</table>
 			</div>
 			<!-- /.col -->
