--- a/application/index/view/major/index.html
+++ b/application/index/view/major/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
-    <title>2019年长安大学辅导员素质能力考核</title>
+    <title>2020年长安大学辅导员素质能力考核</title>
     <link rel="stylesheet" href="https://cdn.bootcss.com/weui/1.1.3/style/weui.min.css">
     <link rel="stylesheet" href="https://cdn.bootcss.com/jquery-weui/1.2.1/css/jquery-weui.min.css">
     <style type="text/css">
@@ -17,7 +17,7 @@
     <div class="weui-panel weui-panel_access">
         <div class="weui-cells">
             <!-- <div class="weui-cells__title">2019年长安大学辅导员素质能力考核</div> -->
-            <h3 style="text-align: center;margin-bottom: 10px;">2019年长安大学辅导员素质能力考核</h3>
+            <h3 style="text-align: center;margin-bottom: 10px;">2020年长安大学辅导员素质能力考核</h3>
             <div class="weui-cell">
                 <div class="weui-cell__bd">
                     <p>姓名</p>
@@ -52,7 +52,11 @@
                 <div class="weui-cell__bd">
                     <p>考试时间</p>
                 </div>
-                <div class="weui-cell__ft">2019-10-15 9:00-11:00</div>
+                {eq name="$basicInfo.type" value="1"}
+                <div class="weui-cell__ft">2020-10-27 9:00-9:30</div>
+                {else/}
+                <div class="weui-cell__ft">2020-10-27 9:00-11:00</div>
+                {/eq}
             </div>
         </div>
     </div>
