--- a/application/admin/view/index/login.html
+++ b/application/admin/view/index/login.html
@@ -59,8 +59,69 @@
         <div class="container">
             <div class="login-wrapper">
                 <div class="login-screen">
+                    <ul class="nav nav-tabs">
+                        <li id="chd" class="active" onclick="choose(this)"><a href="#" >信息门户登录</a></li>
+                        <li id="yiban" onclick="choose(this)"><a href="#">管理员登录</a></li>
+                    </ul>
                     <div class="well">
-                        <div class="login-form">
+                        <div id="chdlogin" class="login-form">
+                            <img id="profile-img" class="profile-img-card" src="__CDN__/assets/img/favicon.ico" />
+                            <p id="profile-name" class="profile-name-card"></p>
+
+                            <form action="" method="post" id="login-form">
+                                <div id="errtips" class="hide"></div>
+                                <div class="form-group">
+                                    <a href="../../ids/admin/index" class="btn btn-success btn-lg btn-block">{:__('信息门户登录')}</a>
+                                </div>
+                                <!--{:token()}
+                                <div class="input-group">
+                                    <div class="input-group-addon"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></div>
+                                    <input type="text" class="form-control" id="pd-form-username" placeholder="{:__('Username')}" name="username" autocomplete="off" value="" data-rule="{:__('Username')}:required;username" />
+                                </div>
+
+                                <div class="input-group">
+                                    <div class="input-group-addon"><span class="glyphicon glyphicon-lock" aria-hidden="true"></span></div>
+                                    <input type="password" class="form-control" id="pd-form-password" placeholder="{:__('Password')}" name="password" autocomplete="off" value="" data-rule="{:__('Password')}:required;password" />
+                                </div>
+                                <div class="input-group">
+                                    <div class="input-group-addon"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></div>
+                                    <select type="text" class="form-control" id="pd-form-logintype" placeholder="{:__('登录方式')}" name="logintype" >
+                                        <option value="normal">系统用户</option>
+                                        <option value="school" selected="selected">信息门户账户</option>
+                                    </select>
+                                </div>
+                                {if $config.fastadmin.login_captcha}
+                                <div class="input-group">
+                                    <div class="input-group-addon"><span class="glyphicon glyphicon-option-horizontal" aria-hidden="true"></span></div>
+                                    <input type="text" name="captcha" class="form-control" placeholder="{:__('Captcha')}" data-rule="{:__('Captcha')}:required;length(4)" />
+                                    <span class="input-group-addon" style="padding:0;border:none;cursor:pointer;">
+                                        <img src="{:captcha_src()}" width="100" height="30" onclick="this.src = '{:captcha_src()}?r=' + Math.random();"/>
+                                    </span>
+                                </div>
+                                {/if}-->
+                                <!--<div class="form-group">
+                                    <label class="inline" for="keeplogin">
+                                        <input type="checkbox" name="keeplogin" id="keeplogin" value="1" />
+                                        {:__('Keep login')}
+                                    </label>
+                                  
+                                </div>
+                                <div class="form-group">
+                                    <button type="submit" class="btn btn-success btn-lg btn-block">{:__('Sign in')}</button>
+                                </div>
+                                <div class="form-group">
+                                    <label class="inline" for="">
+                                        <span style="font-size: 17px;font-weight: 600;">你还可以用以下登录方式:</span>                                   
+                                        <span>
+                                            <a href="../../ids/admin/index" style="display: inline-block;">
+                                                <img width="25" height="25" src="http://www.chd.edu.cn/_upload/article/images/0c/70/5ea9b13b46299475c410572073a5/3a50978d-ffcc-4384-8872-a638806b2829.jpg">
+                                            </a>                                    
+                                        </span>                                         
+                                    </label>
+                                </div>-->
+                            </form>
+                        </div>
+                        <div id="yibanlogin" class="login-form hidden">
                             <img id="profile-img" class="profile-img-card" src="__CDN__/assets/img/avatar.png" />
                             <p id="profile-name" class="profile-name-card"></p>
 
@@ -102,7 +163,7 @@
                                 <div class="form-group">
                                     <button type="submit" class="btn btn-success btn-lg btn-block">{:__('Sign in')}</button>
                                 </div>
-                                <div class="form-group">
+                                <!--<div class="form-group">
                                     <label class="inline" for="">
                                         <span style="font-size: 17px;font-weight: 600;">你还可以用以下登录方式:</span>                                   
                                         <span>
@@ -111,7 +172,7 @@
                                             </a>                                    
                                         </span>                                         
                                     </label>
-                                </div>
+                                </div>-->
                             </form>
                         </div>
                     </div>
@@ -121,5 +182,23 @@
             </div>
         </div>
         {include file="common/script" /}
+        <script>
+            var chd=document.getElementById("chd"), yiban=document.getElementById("yiban");
+            var chdl=document.getElementById("chdlogin"), yibanl=document.getElementById("yibanlogin")
+            function choose(e){
+                console.log(e);
+                e.classList.add("active");
+                if(e==chd) {
+                    yiban.classList.remove("active");
+                    chdl.classList.remove("hidden");
+                    yibanl.classList.add("hidden");
+                }else{
+                    chd.classList.remove("active");
+                    chdl.classList.add("hidden");
+                    yibanl.classList.remove("hidden");
+                } 
+
+            }
+        </script>
     </body>
 </html>
